--- a/index.css
+++ b/index.css
@@ -1,24 +1,67 @@
 body{
-    background: url(https://i.pinimg.com/originals/dc/12/10/dc1210fd6dd7be789473f8d20b324347.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    font-family: 'Dancing Script', cursive;;
+    color: #312f2f;
+    font-size: 30px;
 }
-.search {
-    display:flex; 
-    justify-content: center;
-   
+nav{
+    background-color:black!important
 }
-.city1{
-    display:flex; 
-    justify-content: center;
-    font-size: 40px;
+.contain{
+    margin: 0px 70px;
+    background-color: white;
+  } 
+
+.btn{
+    background-color:#1a9c8d ;
+    color: white
 }
-.temp {
-    display:flex; 
-    justify-content: center;
-    font-size: 50px;
+.btn:hover{
+    background-color:#8A2BE2 ;
+    color: white
 }
-.img {
-    display:flex; 
-    justify-content: center;
+a:hover{ text-decoration:none; }
+.navbar-brand{text-decoration:none;}
+
+
+.blue-violet-darker-hover {
+    color: white!important;
+    -webkit-transition: .4s;
+    transition: .4s; }
+
+
+.blue-violet-darker-hover:hover {
+    -webkit-transition: .4s;
+    transition: .4s;
+    color: 	#8A2BE2!important }
+
+.navcol {
+    color:  white!important;
+    margin: 10px;
+}
+.navcol:hover{
+    color: #8A2BE2!important;
+}
+.dropdown-menu{
+    background-color: #444242;
+    
+}
+.dropdown-item{
+    color:  #1a9c8d;
+}
+.dropdown-item:hover{
+    background-color: #8A2BE2;
+    color:white
+}
+.carousel-item img{
+    height: 680px;
+}
+.slidecol h4{
+    color: #eb4848
+}
+.logo img{
+    height: 70px;
+    width: 70px;
+}
+.slide{
+    padding: 20px 0px;
 }
